# multi-agent-chat-bot-azure

./: .env.example  .gitignore  README.md  app.py  chat_bot_agent.yml  main.py  pyproject.toml  requirements.txt  streamlit.sh  workflow.txt
src/agents/: semantic_kernel_agents.py
src/api/: main.py
src/api/models/: schemas.py
src/core/: cache_service.py  config.py  exceptions.py  logging_config.py  semantic_kernel_factory.py
src/orchestration/: semantic_kernel_orchestrator.py  state.py
src/persistence/: cosmos_repository.py  models.py
src/static/: employees.csv
src/utils/: upload_employee.py
