[project]
name = "multi-agent-custom-automation-solution-accelerator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "altair==4.2.2",
    "azure-cosmos>=4.14.6",
    "fastapi>=0.128.1",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.8",
    "langchain-openai>=1.1.7",
    "langgraph>=1.0.7",
    "pydantic-settings>=2.12.0",
    "semantic-kernel>=1.36.0",
    "streamlit==1.28.0",
    "structlog>=25.5.0",
    "uvicorn>=0.40.0",
]
